# fastapi_cookiecutter_test2

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.alternative  Dockerfile.simple  Makefile  README.md  docker-compose copy.yml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
deployment/: Dockerfile  build.sh  gunicorn_config.py
deployment/testing/: Dockerfile  test.sh
src/: conftest.py  main.py  pytest.ini
src/api/: urls.py
src/api/endpoints/: health.py  providers.py
src/core/: db.py  models.py  settings.py  utils.py
src/schemas/: health.py  providers.py
src/tests/: test_clabe_service.py
